CREATE EXTENSION IF NOT EXISTS pgcrypto;

CREATE TYPE user_role AS ENUM ('CUSTOMER', 'ADMIN');
CREATE TYPE user_status AS ENUM ('ACTIVE', 'SUSPENDED', 'CLOSED');
CREATE TYPE account_status AS ENUM ('ACTIVE', 'SUSPENDED', 'CLOSED');
CREATE TYPE asset_class AS ENUM ('EQUITY', 'ETF', 'CURRENCY_PAIR', 'CRYPTO_PAIR');
CREATE TYPE order_side AS ENUM ('BUY', 'SELL');
CREATE TYPE order_type AS ENUM ('MARKET', 'LIMIT');
CREATE TYPE order_status AS ENUM ('NEW', 'FILLED', 'CANCELLED', 'REJECTED');
CREATE TYPE ledger_entry_type AS ENUM ('INITIAL_BALANCE', 'BUY_TRADE', 'SELL_TRADE');
CREATE TYPE alert_direction AS ENUM ('ABOVE', 'BELOW');
CREATE TYPE notification_status AS ENUM ('PENDING', 'SENT', 'FAILED');
